--- a/roles/containers/servarr/lidarr/tasks/main.yml
+++ b/roles/containers/servarr/lidarr/tasks/main.yml
@@ -1,13 +1,26 @@
 ---
 # To split CUE files you can run the following command:
 # $ shnsplit -f file.cue -o flac file.flac
-- name: Make sure that `shntool` and `cuetools` packages are installed
-  become: yes
-  package:
-    name:
-      - shntool
-      - cuetools
-    state: present
+# or possibly:
+# for album in *.flac; do shnsplit -f "${album%.flac}".cue -o flac -t "%n - %t" "$album"; done
+
+#- name: Make sure that `shntool` and `cuetools` packages are installed
+#  become: yes
+#  package:
+#    name:
+#      - shntool
+#      - flac
+#      - cuetools
+#    state: present
+
+- name: Install {{ container_name }} connection to beets template
+  template:
+    src: beets.sh.j2
+    dest: "{{ docker_dir }}/{{ container_name }}/beets.sh"
+    owner: "{{ username }}"
+    group: "{{ username }}"
+    mode: "0755"
+  register: beets_connect
 
 - name: Make sure the {{ container_name }} container is created and running
   docker_container:
@@ -21,8 +34,11 @@
       "PUID": "{{ guid }}"
       "PGID": "{{ guid }}"
       "TZ": "{{ timezone }}"
+      "DOCKER_MODS": "linuxserver/mods:universal-package-install|linuxserver/mods:universal-docker"
+      "INSTALL_PACKAGES": "shntool|cuetools|flac|vim"
     volumes:
       - "/etc/localtime:/etc/localtime:ro"
       - "{{ docker_dir }}/{{ container_name }}:/config"
       - "{{ mergerfs_root }}:/storage"
+      - "/var/run/docker.sock:/var/run/docker.sock"
     restart_policy: unless-stopped
