--- a/roles/network/swag/tasks/cloudflare_real_ips.yml
+++ b/roles/network/swag/tasks/cloudflare_real_ips.yml
@@ -22,7 +22,7 @@
     owner: "{{ username }}"
     group: "{{ username }}"
   notify:
-    - test nginx
+#    - test nginx
     - restart swag
 
 - name: Add "set_real_ip_from" to every line
@@ -31,7 +31,7 @@
     regexp: "(^.*$)"
     replace: 'set_real_ip_from \1;'
   notify:
-    - test nginx
+#    - test nginx
     - restart swag
 
 - name: Add to nginx.conf
@@ -43,5 +43,5 @@
       include /config/nginx/cf_real_ip.conf;
     insertafter: "^.*include /config/nginx/resolver.conf.*$"
   notify:
-    - test nginx
+#    - test nginx
     - restart swag
