--- a/roles/containers/services/syncthing/defaults/main.yml
+++ b/roles/containers/services/syncthing/defaults/main.yml
@@ -1,6 +1,6 @@
 container_name: syncthing
 
-dashboard_url: "https://syncthing.{{ host_local }}"
+dashboard_url: "http://syncthing.{{ host_local }}"
 
 dashboard_name: "Syncthing"
 
