--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-*.png filter=lfs diff=lfs merge=lfs -text
-*.jpg filter=lfs diff=lfs merge=lfs -text
+# I cannot use LFS when being a forked project
+# *.png filter=lfs diff=lfs merge=lfs -text
+# *.jpg filter=lfs diff=lfs merge=lfs -text
