--- a/roles/containers/media/jellyfin/tasks/main.yml
+++ b/roles/containers/media/jellyfin/tasks/main.yml
@@ -26,8 +26,8 @@
       - "/dev/dri/card0:/dev/dri/card0"
       - "/dev/dri/renderD128:/dev/dri/renderD128"
     state: "started"
-    healthcheck:
-      "test": ["CMD", "curl", "-i", "https://jellyfin.{{ host_local }}/health"]
+#    healthcheck:  # it doesn't work :-(
+#      "test": ["CMD", "curl", "--fail", "http://jellyfin::8096/health", "||", "exit", "1"]
     env:
       "DOCKER_MODS": "linuxserver/mods:jellyfin-opencl-intel"
       "PUID": "{{ guid }}"
