--- a/roles/containers/system/influxdb/tasks/main.yml
+++ b/roles/containers/system/influxdb/tasks/main.yml
@@ -13,9 +13,14 @@
       DOCKER_INFLUXDB_INIT_PASSWORD: "{{ influxdb_pass }}"
       DOCKER_INFLUXDB_INIT_ORG: "{{ influxdb_org}}"
       DOCKER_INFLUXDB_INIT_BUCKET: "{{ influxdb_bucket }}"
+      DOCKER_INFLUXDB_INIT_RETENTION: "4w"
+      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: "{{ influxdb_token }}"
     volumes:
-      - "{{ docker_dir }}/{{ container_name }}:/var/lib/influxdb2"
+      - "{{ docker_dir }}/{{ container_name }}/data:/var/lib/influxdb2"
+      - "{{ docker_dir }}/{{ container_name }}/config:/etc/influxdb2"
       - "/var/run/docker.sock:/var/run/docker.sock"
     ports:
       - 127.0.0.1:8086:8086/tcp
     restart_policy: unless-stopped
+    
+#docker exec influxdb influx auth create --org "catafalco" --read-authorizations --write-authorizations --read-buckets --write-buckets --read-dashboards --write-dashboards --read-tasks --write-tasks --read-telegrafs  --write-telegrafs --read-users --write-users --read-variables --write-variables --read-secrets --write-secrets --read-labels --write-labels --read-views --write-views --read-documents --write-documents --read-notificationRules --write-notificationRules --read-notificationEndpoints --write-notificationEndpoints --read-checks --write-checks --read-dbrp --write-dbrp --read-annotations --write-annotations --read-sources --write-sources --read-scrapers --write-scrapers --read-notebooks --write-notebooks --read-remotes --write-remotes --read-replications --write-replications
