--- a/roles/containers/system/healthchecks/tasks/main.yml
+++ b/roles/containers/system/healthchecks/tasks/main.yml
@@ -22,10 +22,11 @@
       "SITE_NAME": "CataFalco"
       "SUPERUSER_EMAIL": "{{ email }}"
       "SUPERUSER_PASSWORD": "{{ healthchecks_password }}"
-      "DEFAULT_FROM_EMAIL": "healthchecks@{{ host_local }}"
+      "DEFAULT_FROM_EMAIL": "{{ email_login }}"
       "EMAIL_HOST": "{{ email_smtp_host }}"
       "EMAIL_HOST_USER": "{{ email_login }}"
       "EMAIL_HOST_PASSWORD": "{{ email_password }}"
+      "EMAIL_USE_TLS": "True"
       "REGENERATE_SETTINGS": "True"
       "DEBUG": "False"
     volumes:
