--- a/roles/containers/media/photoprism/tasks/main.yml
+++ b/roles/containers/media/photoprism/tasks/main.yml
@@ -30,7 +30,7 @@
     pull: yes
     networks:
       - name: swag_internal_network
-    command: "mysqld --transaction-isolation=READ-COMMITTED --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --max-connections=512 --innodb-rollback-on-timeout=OFF --innodb-lock-wait-timeout=120"
+    command: "mariadbd --innodb-buffer-pool-size=512M --transaction-isolation=READ-COMMITTED --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --max-connections=512 --innodb-rollback-on-timeout=OFF --innodb-lock-wait-timeout=120"
     state: 'started'
     user: "{{ guid }}:{{ guid }}"
     env:
