--- a/roles/containers/media/jellyfin/tasks/main.yml
+++ b/roles/containers/media/jellyfin/tasks/main.yml
@@ -29,18 +29,18 @@
 #    healthcheck:  # it doesn't work :-(
 #      "test": ["CMD", "curl", "--fail", "http://jellyfin::8096/health", "||", "exit", "1"]
     env:
-      "DOCKER_MODS": "linuxserver/mods:jellyfin-opencl-intel"
       "PUID": "{{ guid }}"
       "PGID": "{{ guid }}"
       "UMASK": "002"
       "TZ": "{{ timezone }}"
       "VERSION": "latest"
       "JELLYFIN_PublishedServerUrl": "https://jellyfin.{{ host_local }}"
+      "DOCKER_MODS": "linuxserver/mods:jellyfin-opencl-intel"
     groups:
       - 109
     volumes:
       - "{{ docker_dir }}/{{ container_name }}:/config"
-      - "{{ mergerfs_root }}_slow/Media/Transcodes:/config/data/transcodes"
+      - "{{ mergerfs_root }}/Media/Transcodes:/config/data/transcodes"
       - "{{ mergerfs_root }}/Media/Movies:/data/movies"
       - "{{ mergerfs_root }}/Media/TV:/data/tv"
       - "{{ mergerfs_root }}/Media/Books:/data/books:ro"
