--- a/roles/containers/servarr/deluge/tasks/main.yml
+++ b/roles/containers/servarr/deluge/tasks/main.yml
@@ -30,7 +30,7 @@
 - name: Make sure the Deluge container is created and running
   docker_container:
     name: "{{ container_name }}"
-    image: "binhex/arch-delugevpn:2.0.5-1-04"
+    image: "binhex/arch-delugevpn:2.1.1-4-02"  # In case of issues with MergerFS stick to :2.0.5-1-04
     pull: yes
     networks:
       - name: swag_internal_network
