--- a/requirements.yml
+++ b/requirements.yml
@@ -7,7 +7,8 @@ roles:
   - name: stuvusit.smartd
   - name: oefenweb.dns
   - name: notthebee.ubuntu_autoinstall
-  - name: ironicbadger.ansible_role_snapraid
+  - name: IronicBadger.snapraid
   - name: veselahouba.crowdsec
   - name: linux-system-roles.cockpit
   - name: stefangweichinger.ansible_rclone
+  - name: simoncaron.nut
