--- a/roles/containers/servarr/deluge/tasks/main.yml
+++ b/roles/containers/servarr/deluge/tasks/main.yml
@@ -30,23 +30,22 @@
 - name: Make sure the Deluge container is created and running
   docker_container:
     name: "{{ container_name }}"
-    image: "binhex/arch-delugevpn:2.1.1-4-02"  # In case of issues with MergerFS stick to :2.0.5-1-04
+    image: "binhex/arch-delugevpn:2.1.1-4-04"  # In case of issues with MergerFS stick to :2.0.5-1-04
     pull: yes
     networks:
       - name: swag_internal_network
     privileged: yes
     sysctls:
       "net.ipv4.conf.all.src_valid_mark": "1"
-    capabilities:
-      - net_admin
     state: 'started'
     env:
       "VPN_ENABLED": "yes"
       "VPN_PROV": custom
       "VPN_CLIENT": "wireguard"
+      "STRICT_PORT_FORWARD": "no"
       "ENABLE_PRIVOXY": "yes"
       "LAN_NETWORK": "172.18.0.0/16,{{ lan_network }}"
-      "NAME_SERVERS": "9.9.9.9, 149.112.112.112"
+      "NAME_SERVERS": "9.9.9.9,149.112.112.112"
       "DELUGE_DAEMON_LOG_LEVEL": "info"
       "DELUGE_WEB_LOG_LEVEL": "info"
       "DEBUG": "true"
