--- a/roles/containers/homeautomation/deconz/tasks/docker.yml
+++ b/roles/containers/homeautomation/deconz/tasks/docker.yml
@@ -9,7 +9,7 @@
       any
   register: zigbee_dev 
 
-- name: Make sure the {{ container_name }} container is created and running
+- name: Make sure that {{ container_name }} container is created and running
   docker_container:
     name: "{{ container_name }}"
     image: "deconzcommunity/deconz:stable"
