--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@ files/fonts/*
 .DS_Store
 secret.yml
 group_vars/
-host_vars/
 !/host_vars/.gitkeep
-!/group_vars/all/vars.yml
+!/group_vars/*/vars.yml
 mountsraspi
 .idea
