--- a/roles/containers/media/beets/tasks/main.yml
+++ b/roles/containers/media/beets/tasks/main.yml
@@ -15,7 +15,7 @@
     group: "{{ username }}"
   register: configuration
 
-- name: Make sure the Beets container is created and running
+- name: Make sure that Beets container is created and running
   docker_container:
     name: "{{ container_name }}"
     image: lscr.io/linuxserver/beets:latest
