--- a/roles/containers/media/openbooks/tasks/main.yml
+++ b/roles/containers/media/openbooks/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Make sure the {{ container_name }} container is created and running
+- name: Make sure that {{ container_name }} container is created and running
   docker_container:
     name: "{{ container_name }}"
     image: "evanbuss/openbooks"
