--- a/roles/containers/servarr/lidarr/tasks/main.yml
+++ b/roles/containers/servarr/lidarr/tasks/main.yml
@@ -22,7 +22,7 @@
     mode: "0755"
   register: beets_connect
 
-- name: Make sure the {{ container_name }} container is created and running
+- name: Make sure that {{ container_name }} container is created and running
   docker_container:
     name: "{{ container_name }}"
     image: "ghcr.io/linuxserver/lidarr"
