--- a/roles/containers/services/flame/tasks/docker.yml
+++ b/roles/containers/services/flame/tasks/docker.yml
@@ -1,5 +1,5 @@
 ---
-- name: Make sure the {{ container_name }} container is created and running
+- name: Make sure that {{ container_name }} container is created and running
   docker_container:
       name: '{{ container_name }}'
       image: pawelmalak/flame:multiarch2.2.1
