--- a/roles/containers/services/syncthing/tasks/main.yml
+++ b/roles/containers/services/syncthing/tasks/main.yml
@@ -13,7 +13,7 @@
 # To see immediate effect without reboot
 # echo 204800 | sudo tee /proc/sys/fs/inotify/max_user_watches
 
-- name: Make sure the {{ container_name }} container is created and running
+- name: Make sure that {{ container_name }} container is created and running
   docker_container:
     name: "{{ container_name }}"
     image: "ghcr.io/linuxserver/syncthing"
