--- a/roles/containers/system/authelia/tasks/main.yml
+++ b/roles/containers/system/authelia/tasks/main.yml
@@ -23,7 +23,7 @@
     group: "{{ username }}"
   register: users
 
-- name: Make sure the {{ container_name }} container is created and running
+- name: Make sure that {{ container_name }} container is created and running
   docker_container:
     name: "{{ container_name }}"
     image: "authelia/authelia:latest"
