--- a/roles/containers/system/healthchecks/tasks/main.yml
+++ b/roles/containers/system/healthchecks/tasks/main.yml
@@ -7,7 +7,7 @@
     group: "{{ username }}"
     mode: 0700
 
-- name: Make sure the Healthchecks container is created and running
+- name: Make sure that Healthchecks container is created and running
   docker_container:
     name: "{{ container_name }}"
     image: "lscr.io/linuxserver/healthchecks:latest"
