--- a/roles/containers/system/influxdb/tasks/main.yml
+++ b/roles/containers/system/influxdb/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Make sure the InfluxDB container is created and running
+- name: Make sure that InfluxDB container is created and running
   docker_container:
     name: "{{ container_name }}"
     image: "influxdb"
