--- a/roles/containers/system/openspeedtest/tasks/main.yml
+++ b/roles/containers/system/openspeedtest/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Make sure the OpenSpeedTest container is created and running
+- name: Make sure that OpenSpeedTest container is created and running
   docker_container:
     name: "{{ container_name }}"
     image: "openspeedtest/latest"
