--- a/roles/containers/system/unifi/tasks/main.yml
+++ b/roles/containers/system/unifi/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Make sure the Unifi container is created and running
+- name: Make sure that Unifi container is created and running
   docker_container:
     name: '{{ container_name }}'
     image: "ghcr.io/linuxserver/unifi-controller"
