--- a/roles/containers/system/watchtower/tasks/main.yml
+++ b/roles/containers/system/watchtower/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Make sure the Watchtower container is created and running
+- name: Make sure that Watchtower container is created and running
   docker_container:
     name: "{{ container_name }}"
     image: "containrrr/watchtower"
