--- a/roles/homer/tasks/docker.yml
+++ b/roles/homer/tasks/docker.yml
@@ -1,6 +1,6 @@
 ---
 # https://github.com/bastienwirtz/homer
-- name: Make sure the Homer container is created and running
+- name: Make sure that Homer container is created and running
   docker_container:
     name: 'homer'
     image: "b4bz/homer"
