--- a/roles/network/adguard/tasks/main.yml
+++ b/roles/network/adguard/tasks/main.yml
@@ -9,7 +9,7 @@
           - subnet: '{{ lan_network }}'
             gateway: '{{ lan_gateway }}'
 
-- name: Make sure the {{ container_name }} container is created and running
+- name: Make sure that {{ container_name }} container is created and running
   docker_container:
       image: adguard/adguardhome
       name: adguard
