--- a/roles/network/ikev2/tasks/main.yml
+++ b/roles/network/ikev2/tasks/main.yml
@@ -26,7 +26,7 @@
     modification_time: preserve
     mode: 0644
 
-- name: Make sure the {{ container_name }} container is created and running
+- name: Make sure that {{ container_name }} container is created and running
   docker_container:
     name: 'ikev2'
     image: "notthebee/ikev2:{{ arch }}"
