--- a/roles/network/pihole/tasks/main.yml
+++ b/roles/network/pihole/tasks/main.yml
@@ -14,7 +14,7 @@
     mode: 0644
 
 
-- name: Make sure the {{ container_name }} container is created and running
+- name: Make sure that {{ container_name }} container is created and running
   docker_container:
     name: 'pihole'
     image: "cbcrowe/pihole-unbound"
