--- a/roles/network/swag/tasks/docker.yml
+++ b/roles/network/swag/tasks/docker.yml
@@ -1,5 +1,5 @@
 ---
-- name: Make sure the swag_internal container is created and running
+- name: Make sure that swag_internal container is created and running
   docker_container:
     name: "swag_internal"
     image: "ghcr.io/linuxserver/swag"
@@ -18,6 +18,7 @@
       "VALIDATION": "dns"
       "DNSPLUGIN": "cloudflare"
       "EMAIL": "{{ cloudflare_email }}"
+      "PROPAGATION": "60"
       "DOCKER_MODS": "linuxserver/mods:swag-dashboard"
     ports:
       - "192.168.1.3:443:443"
@@ -27,7 +28,7 @@
       - "{{ docker_dir }}/swag/letsencrypt:/config/etc/letsencrypt"
     restart_policy: unless-stopped
 
-#- name: Make sure the swag_public container is created and running
+#- name: Make sure that swag_public container is created and running
 #  docker_container:
 #    name: "swag_public"
 #    image: "ghcr.io/linuxserver/swag"
