--- a/roles/network/wireguard/tasks/main.yml
+++ b/roles/network/wireguard/tasks/main.yml
@@ -7,7 +7,7 @@
     group: "{{ username }}"
     mode: 0755
 
-- name: Make sure the Wireguard container is created and running
+- name: Make sure that Wireguard container is created and running
   docker_container:
     name: "{{ container_name }}"
     image: "ghcr.io/linuxserver/wireguard"
