Adding ARM ripping machine

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
-INVENTORY = hosts
-ansible_python_interpreter=/usr/bin/python3
-timeout=30
+inventory = ./hosts
+interpreter_python = /usr/bin/python3
+timeout = 30
 
-[ssh_connection]
+[connection]
 pipelining = True
