Adding custom Handbrake presets in ARM

--- a/roles/containers/media/arm/tasks/main.yml
+++ b/roles/containers/media/arm/tasks/main.yml
@@ -13,6 +13,22 @@
     group: "{{ guid }}"
     mode: 0755
 
+- name: Copy the main ARM config
+  copy:
+    src: roles/containers/media/arm/templates/arm.yaml.j2
+    dest: "{{ docker_dir }}/{{ container_name }}/config/arm.yaml"
+    owner: "{{ guid }}"
+    group: "{{ guid }}"
+    mode: 0644
+
+- name: Copy HandBrake custom presets
+  copy:
+    src: roles/containers/media/arm/templates/handbrake-presets/HQ-576p-x264-crf20.json.j2
+    dest: "{{ docker_dir }}/{{ container_name }}/config/HQ-576p-x264-crf20.json"
+    owner: "{{ guid }}"
+    group: "{{ guid }}"
+    mode: 0644
+
 - name: Make sure that {{ container_name }} container is created and running
   docker_container:
     name: "{{ container_name }}"
@@ -23,7 +39,7 @@
     privileged: yes
     devices:
       - "/dev/sr0:/dev/sr0"
-      - "/dev/sg4:/dev/sg4"
+      - "/dev/sg0:/dev/sg0"
     state: "started"
     env:
       "ARM_UID": "{{ guid }}"
