--- a/roles/containers/servarr/prowlarr/tasks/main.yml
+++ b/roles/containers/servarr/prowlarr/tasks/main.yml
@@ -1,4 +1,17 @@
 ---
+- name: Make sure that FlareSolverr container is created and running
+  docker_container:
+    name: "flaresolverr"
+    image: "ghcr.io/flaresolverr/flaresolverr:latest"
+    pull: yes
+    networks:
+      - name: swag_internal_network
+    state: "started"
+    env:
+      "LOG_LEVEL": info
+      "TZ": "{{ timezone }}"
+    restart_policy: unless-stopped
+
 - name: Make sure that {{ container_name }} container is created and running
   docker_container:
     name: "{{ container_name }}"
@@ -6,7 +19,7 @@
     pull: yes
     networks:
       - name: swag_internal_network
-    state: 'started'
+    state: "started"
     env:
       "PUID": "{{ guid }}"
       "PGID": "{{ guid }}"
