--- a/run.yml
+++ b/run.yml
@@ -89,11 +89,11 @@
         - smartd
       when: enable_nas_stuff | default(False)
 
-#    - role: ironicbadger.ansible_role_snapraid  # use to be ironicbadger.ansible_role_snapraid
-#      become: yes
-#      tags:
-#        - snapraid
-#      when: enable_nas_stuff | default(False)
+    - role: IronicBadger.snapraid
+      become: yes
+      tags:
+        - snapraid
+      when: enable_nas_stuff | default(False)
 
 
     #
@@ -384,6 +384,13 @@
         - firefox
         - containers
       when: enable_firefox | default(False)
+
+    - role: containers/services/invidious
+      become: no
+      tags:
+        - invidious
+        - containers
+      when: enable_invidious | default(False)
 
     - role: containers/services/syncthing
       become: no
