--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,10 @@
 ---
 repos:
 - repo: https://github.com/ansible/ansible-lint.git
-  rev: v5.3.2
+  rev: v6.22.1
   hooks:
     - id: ansible-lint
-      args: [--offline]
+      args: [--offline, --fix]
       files: \.(yaml|yml)$
+      additional_dependencies:
+       - ansible
