--- a/roles/containers/services/invidious/defaults/main.yml
+++ b/roles/containers/services/invidious/defaults/main.yml
@@ -4,4 +4,4 @@ dashboard_url: "https://invidious.{{ host_local }}"
 
 dashboard_name: "Invidious"
 
-#homer_category: services
+homer_category: services
